// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a non squared Icon 1`] = `
.emotion-0 {
  font-family: 'quid-icons' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-feature-settings: 'liga';
  font-variant-ligatures: discretionary-ligatures;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<Icon
  name="network"
  squared={false}
>
  <i
    className="emotion-0 emotion-1"
  >
    network
  </i>
</Icon>
`;

exports[`renders the expected markup 1`] = `
.emotion-0 {
  font-family: 'quid-icons' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-feature-settings: 'liga';
  font-variant-ligatures: discretionary-ligatures;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<Icon
  name="network"
>
  <i
    className="emotion-0 emotion-1"
  >
    network
  </i>
</Icon>
`;
